--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>eu odeio as plataformas do governo</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+</head>
+
+</head>
+
+<body>
+    <main>
+        <div class="passo" id="passo-0">
+            <p>Luigi sempre foi um homem simples, feliz com sua vida pacata e seu trabalho como encanador. No entanto,
+                uma série de eventos inexplicáveis começa a perturbar sua rotina: desaparecimentos misteriosos,
+                vigilância constante e a crescente sensação de que algo está muito errado no Reino Cogumelo.</p>
+                <button class="btn-next" data-next="1">osasco</button>
+                <button class="btn-next" data-next="2">diadema</button>
+        </div>
+        <div class="passo" id="passo-1">
+            <p>Você começa sua jornada em osasco, subindo o Pico da favela ao amanhecer para encontrar a primeira pista.
+            </p>
+            <button class="btn-next" data-next="3">Procurar a pista no topo da favela</button>
+            <button class="btn-next" data-next="4">Desistir e voltar para casa</button>
+        </div>
+    </main>
+
+
+
+</body>
+
+</html>
