--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <main>
-        <div class="passo" id="passo-0">
+        <div class="passo ativo" id="passo-0">
             <p>Luigi sempre foi um homem simples, feliz com sua vida pacata e seu trabalho como encanador. No entanto,
                 uma série de eventos inexplicáveis começa a perturbar sua rotina: desaparecimentos misteriosos,
                 vigilância constante e a crescente sensação de que algo está muito errado no Reino Cogumelo.</p>
@@ -29,7 +29,7 @@
             <button class="btn-next" data-next="4">Desistir e voltar para casa</button>
         </div>
     </main>
-
+<script src="script.js"></script>
 
 
 </body>
